Fix color highlight Aa positioning
Was broken in older Safari

--- a/app/assets/stylesheets/lexxy-editor.css
+++ b/app/assets/stylesheets/lexxy-editor.css
@@ -752,15 +752,13 @@
           inline-size: 100%;
 
           &:after {
-            align-self: center;
+            align-items: center;
             content: "Aa";
-            display: inline-block;
+            display: flex;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            inset: 0;
+            justify-content: center;
             position: absolute;
-            inset-block-start: 0;
-            inset-block-end: 0;
-            inset-inline-end: 0;
-            inset-inline-start: 0;
           }
 
           &[aria-pressed="true"] {
